--- a/slides/w1_intro.html
+++ b/slides/w1_intro.html
@@ -623,12 +623,12 @@ https://happygitwithr.com/
 
 ### Final Project - Paper Scoring Rubric
 
-<div id="lqfygimyze" style="overflow-x:auto;overflow-y:auto;width:auto;height:80%;">
+<div id="oktzgjckqa" style="overflow-x:auto;overflow-y:auto;width:auto;height:80%;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#lqfygimyze .gt_table {
+#oktzgjckqa .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -653,7 +653,7 @@ https://happygitwithr.com/
   border-left-color: #D3D3D3;
 }
 
-#lqfygimyze .gt_heading {
+#oktzgjckqa .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -665,7 +665,7 @@ https://happygitwithr.com/
   border-right-color: #D3D3D3;
 }
 
-#lqfygimyze .gt_title {
+#oktzgjckqa .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -675,7 +675,7 @@ https://happygitwithr.com/
   border-bottom-width: 0;
 }
 
-#lqfygimyze .gt_subtitle {
+#oktzgjckqa .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -685,13 +685,13 @@ https://happygitwithr.com/
   border-top-width: 0;
 }
 
-#lqfygimyze .gt_bottom_border {
+#oktzgjckqa .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#lqfygimyze .gt_col_headings {
+#oktzgjckqa .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -706,7 +706,7 @@ https://happygitwithr.com/
   border-right-color: #D3D3D3;
 }
 
-#lqfygimyze .gt_col_heading {
+#oktzgjckqa .gt_col_heading {
   color: #FFFFFF;
   background-color: #0072B2;
   font-size: 100%;
@@ -726,7 +726,7 @@ https://happygitwithr.com/
   overflow-x: hidden;
 }
 
-#lqfygimyze .gt_column_spanner_outer {
+#oktzgjckqa .gt_column_spanner_outer {
   color: #FFFFFF;
   background-color: #0072B2;
   font-size: 100%;
@@ -738,15 +738,15 @@ https://happygitwithr.com/
   padding-right: 4px;
 }
 
-#lqfygimyze .gt_column_spanner_outer:first-child {
+#oktzgjckqa .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#lqfygimyze .gt_column_spanner_outer:last-child {
+#oktzgjckqa .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#lqfygimyze .gt_column_spanner {
+#oktzgjckqa .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -758,7 +758,7 @@ https://happygitwithr.com/
   width: 100%;
 }
 
-#lqfygimyze .gt_group_heading {
+#oktzgjckqa .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -780,7 +780,7 @@ https://happygitwithr.com/
   vertical-align: middle;
 }
 
-#lqfygimyze .gt_empty_group_heading {
+#oktzgjckqa .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -795,15 +795,15 @@ https://happygitwithr.com/
   vertical-align: middle;
 }
 
-#lqfygimyze .gt_from_md > :first-child {
+#oktzgjckqa .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#lqfygimyze .gt_from_md > :last-child {
+#oktzgjckqa .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#lqfygimyze .gt_row {
+#oktzgjckqa .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -822,7 +822,7 @@ https://happygitwithr.com/
   overflow-x: hidden;
 }
 
-#lqfygimyze .gt_stub {
+#oktzgjckqa .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -834,7 +834,7 @@ https://happygitwithr.com/
   padding-left: 12px;
 }
 
-#lqfygimyze .gt_summary_row {
+#oktzgjckqa .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -844,7 +844,7 @@ https://happygitwithr.com/
   padding-right: 5px;
 }
 
-#lqfygimyze .gt_first_summary_row {
+#oktzgjckqa .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -854,7 +854,7 @@ https://happygitwithr.com/
   border-top-color: #D3D3D3;
 }
 
-#lqfygimyze .gt_grand_summary_row {
+#oktzgjckqa .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -864,7 +864,7 @@ https://happygitwithr.com/
   padding-right: 5px;
 }
 
-#lqfygimyze .gt_first_grand_summary_row {
+#oktzgjckqa .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -874,11 +874,11 @@ https://happygitwithr.com/
   border-top-color: #D3D3D3;
 }
 
-#lqfygimyze .gt_striped {
+#oktzgjckqa .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#lqfygimyze .gt_table_body {
+#oktzgjckqa .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -887,7 +887,7 @@ https://happygitwithr.com/
   border-bottom-color: #D3D3D3;
 }
 
-#lqfygimyze .gt_footnotes {
+#oktzgjckqa .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -901,13 +901,13 @@ https://happygitwithr.com/
   border-right-color: #D3D3D3;
 }
 
-#lqfygimyze .gt_footnote {
+#oktzgjckqa .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#lqfygimyze .gt_sourcenotes {
+#oktzgjckqa .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -921,41 +921,41 @@ https://happygitwithr.com/
   border-right-color: #D3D3D3;
 }
 
-#lqfygimyze .gt_sourcenote {
+#oktzgjckqa .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#lqfygimyze .gt_left {
+#oktzgjckqa .gt_left {
   text-align: left;
 }
 
-#lqfygimyze .gt_center {
+#oktzgjckqa .gt_center {
   text-align: center;
 }
 
-#lqfygimyze .gt_right {
+#oktzgjckqa .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#lqfygimyze .gt_font_normal {
+#oktzgjckqa .gt_font_normal {
   font-weight: normal;
 }
 
-#lqfygimyze .gt_font_bold {
+#oktzgjckqa .gt_font_bold {
   font-weight: bold;
 }
 
-#lqfygimyze .gt_font_italic {
+#oktzgjckqa .gt_font_italic {
   font-style: italic;
 }
 
-#lqfygimyze .gt_super {
+#oktzgjckqa .gt_super {
   font-size: 65%;
 }
 
-#lqfygimyze .gt_footnote_marks {
+#oktzgjckqa .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
