--- a/slides/w1_intro.html
+++ b/slides/w1_intro.html
@@ -141,7 +141,8 @@ Like these!
 .pull-left[
 [**For a project**](https://jnese.github.io/coreprosody/)
 
-&lt;img src="images/coreprosody.png" width="100%" /&gt;
+![](./images/coreprosody.png)
+
 ]
 
 .pull-right[
@@ -623,12 +624,12 @@ https://happygitwithr.com/
 
 ### Final Project - Paper Scoring Rubric
 
-<div id="izkxtznzbw" style="overflow-x:auto;overflow-y:auto;width:auto;height:80%;">
+<div id="pvrxxdzpik" style="overflow-x:auto;overflow-y:auto;width:auto;height:80%;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#izkxtznzbw .gt_table {
+#pvrxxdzpik .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -653,7 +654,7 @@ https://happygitwithr.com/
   border-left-color: #D3D3D3;
 }
 
-#izkxtznzbw .gt_heading {
+#pvrxxdzpik .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -665,7 +666,7 @@ https://happygitwithr.com/
   border-right-color: #D3D3D3;
 }
 
-#izkxtznzbw .gt_title {
+#pvrxxdzpik .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -675,7 +676,7 @@ https://happygitwithr.com/
   border-bottom-width: 0;
 }
 
-#izkxtznzbw .gt_subtitle {
+#pvrxxdzpik .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -685,13 +686,13 @@ https://happygitwithr.com/
   border-top-width: 0;
 }
 
-#izkxtznzbw .gt_bottom_border {
+#pvrxxdzpik .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#izkxtznzbw .gt_col_headings {
+#pvrxxdzpik .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -706,7 +707,7 @@ https://happygitwithr.com/
   border-right-color: #D3D3D3;
 }
 
-#izkxtznzbw .gt_col_heading {
+#pvrxxdzpik .gt_col_heading {
   color: #FFFFFF;
   background-color: #0072B2;
   font-size: 100%;
@@ -726,7 +727,7 @@ https://happygitwithr.com/
   overflow-x: hidden;
 }
 
-#izkxtznzbw .gt_column_spanner_outer {
+#pvrxxdzpik .gt_column_spanner_outer {
   color: #FFFFFF;
   background-color: #0072B2;
   font-size: 100%;
@@ -738,15 +739,15 @@ https://happygitwithr.com/
   padding-right: 4px;
 }
 
-#izkxtznzbw .gt_column_spanner_outer:first-child {
+#pvrxxdzpik .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#izkxtznzbw .gt_column_spanner_outer:last-child {
+#pvrxxdzpik .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#izkxtznzbw .gt_column_spanner {
+#pvrxxdzpik .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -758,7 +759,7 @@ https://happygitwithr.com/
   width: 100%;
 }
 
-#izkxtznzbw .gt_group_heading {
+#pvrxxdzpik .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -780,7 +781,7 @@ https://happygitwithr.com/
   vertical-align: middle;
 }
 
-#izkxtznzbw .gt_empty_group_heading {
+#pvrxxdzpik .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -795,15 +796,15 @@ https://happygitwithr.com/
   vertical-align: middle;
 }
 
-#izkxtznzbw .gt_from_md > :first-child {
+#pvrxxdzpik .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#izkxtznzbw .gt_from_md > :last-child {
+#pvrxxdzpik .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#izkxtznzbw .gt_row {
+#pvrxxdzpik .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -822,7 +823,7 @@ https://happygitwithr.com/
   overflow-x: hidden;
 }
 
-#izkxtznzbw .gt_stub {
+#pvrxxdzpik .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -834,7 +835,7 @@ https://happygitwithr.com/
   padding-left: 12px;
 }
 
-#izkxtznzbw .gt_summary_row {
+#pvrxxdzpik .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -844,7 +845,7 @@ https://happygitwithr.com/
   padding-right: 5px;
 }
 
-#izkxtznzbw .gt_first_summary_row {
+#pvrxxdzpik .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -854,7 +855,7 @@ https://happygitwithr.com/
   border-top-color: #D3D3D3;
 }
 
-#izkxtznzbw .gt_grand_summary_row {
+#pvrxxdzpik .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -864,7 +865,7 @@ https://happygitwithr.com/
   padding-right: 5px;
 }
 
-#izkxtznzbw .gt_first_grand_summary_row {
+#pvrxxdzpik .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -874,11 +875,11 @@ https://happygitwithr.com/
   border-top-color: #D3D3D3;
 }
 
-#izkxtznzbw .gt_striped {
+#pvrxxdzpik .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#izkxtznzbw .gt_table_body {
+#pvrxxdzpik .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -887,7 +888,7 @@ https://happygitwithr.com/
   border-bottom-color: #D3D3D3;
 }
 
-#izkxtznzbw .gt_footnotes {
+#pvrxxdzpik .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -901,13 +902,13 @@ https://happygitwithr.com/
   border-right-color: #D3D3D3;
 }
 
-#izkxtznzbw .gt_footnote {
+#pvrxxdzpik .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#izkxtznzbw .gt_sourcenotes {
+#pvrxxdzpik .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -921,41 +922,41 @@ https://happygitwithr.com/
   border-right-color: #D3D3D3;
 }
 
-#izkxtznzbw .gt_sourcenote {
+#pvrxxdzpik .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#izkxtznzbw .gt_left {
+#pvrxxdzpik .gt_left {
   text-align: left;
 }
 
-#izkxtznzbw .gt_center {
+#pvrxxdzpik .gt_center {
   text-align: center;
 }
 
-#izkxtznzbw .gt_right {
+#pvrxxdzpik .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#izkxtznzbw .gt_font_normal {
+#pvrxxdzpik .gt_font_normal {
   font-weight: normal;
 }
 
-#izkxtznzbw .gt_font_bold {
+#pvrxxdzpik .gt_font_bold {
   font-weight: bold;
 }
 
-#izkxtznzbw .gt_font_italic {
+#pvrxxdzpik .gt_font_italic {
   font-style: italic;
 }
 
-#izkxtznzbw .gt_super {
+#pvrxxdzpik .gt_super {
   font-size: 65%;
 }
 
-#izkxtznzbw .gt_footnote_marks {
+#pvrxxdzpik .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
